[tool.poetry]
authors = ["naoki_kubota <naoki_kubota@jtekt.co.jp>"]
description = ""
license = "MIT License"
name = "pytransform"
readme = "README.md"
version = "0.4.0"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
scipy = "^1.11.1"
numpy = "^1.25.2"
numpy-quaternion = "^2022.4.3"
matplotlib = "^3.7.2"
anytree = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.3.2"
pytest-cov = "^4.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
